# togglctl

./: Cargo.toml  LICENSE  README.md  Toggl Track.alfredworkflow
.github/workflows/: release.yml
resources/: togglctl.1  togglctl.8
src/: alfred.rs  auth.rs  cache.rs  cmd.rs  main.rs  toggl.rs
