[package]
name = "togglctl"
version = "0.1.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pico-args = { version = "0.4.0", features = ["short-space-opt"]}
directories = "3.0.1"
