[package]
name = "togglctl"
version = "0.1.0"
authors = ["Christo <christo@cryptodrunks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
url = "2.2"
pico-args = { version = "0.4.0", features = ["short-space-opt"]}
directories = "3.0"
ureq = { version = "*", features = ["json", "tls"] }
